支持全国281个城市，支持可配

--- a/projectfoundation/src/main/res/values/strings.xml
+++ b/projectfoundation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProjectFoundation</string>
+    <string name="error_message">网络不给力，请稍后再试</string>
 </resources>
